infer/tests/codetoanalyze/cpp/errors/vector/use_models_headers.cpp
/*
 * Copyright (c) 2017-present, Facebook, Inc.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

#include <vector>
#if defined(_LIBCPP_VECTOR) || defined(_GLIBCXX_VECTOR)
#error "infer should use models headers"
#endif
